[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "final project for ml course"
authors = ["Alina"]

[tool.poetry.dependencies]
python = "3.9.12"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
